--- a/sass/site/_posts-and-pages.scss
+++ b/sass/site/_posts-and-pages.scss
@@ -76,6 +76,12 @@
 		@include make-col(12);	
 	}
 }
+.blog-post{
+  margin:0;
+  padding: 6rem 0;
 
-
+  &:nth-child(odd){
+  background: color;
+}
+}
 
