--- a/style.css
+++ b/style.css
@@ -6960,6 +6960,12 @@ a.text-dark:hover, a.text-dark:focus {
       flex: 0 0 100%;
   max-width: 100%; }
 
+.blog-post {
+  margin: 0;
+  padding: 6rem 0; }
+  .blog-post:nth-child(odd) {
+    background: color; }
+
 /*--------------------------------------------------------------
 ## Widgets
 --------------------------------------------------------------*/
@@ -6990,6 +6996,9 @@ a.text-dark:hover, a.text-dark:focus {
 --------------------------------------------------------------*/
 .site-header {
   margin-bottom: 3em; }
+
+.blog .site-header {
+  margin-bottom: 0; }
 
 .navbar {
   background-color: #1abc9c; }
