--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -4,6 +4,14 @@
 --------------------------------------------------------------*/
 @import "layout/content-sidebar";
 
+
+
+/*--------------------------------------------------------------
+## Comments
+--------------------------------------------------------------*/
+@import "templates/about-us";
+
+
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
