--- a/style.css
+++ b/style.css
@@ -6872,6 +6872,12 @@ a.text-dark:hover, a.text-dark:focus {
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
+.about {
+  background-color: #e9ecef; }
+
+/*--------------------------------------------------------------
+## Comments
+--------------------------------------------------------------*/
 .comments-area {
   margin-top: 2em; }
 
@@ -6960,12 +6966,24 @@ a.text-dark:hover, a.text-dark:focus {
       flex: 0 0 100%;
   max-width: 100%; }
 
-.blog-post {
+.post {
   margin: 0;
-  padding: 6rem 0; }
-  .blog-post:nth-child(odd) {
-    background: color; }
+  padding: 2rem 0; }
 
+.blog .post {
+  padding: 6rem 0; }
+  .blog .post:nth-child(odd) {
+    background-color: #f8f9fa; }
+
+/*
+.blog-post{
+  margin:0;
+  padding: 6rem 0;
+
+  &:nth-child(odd){
+  background-color: black;
+}
+}*/
 /*--------------------------------------------------------------
 ## Widgets
 --------------------------------------------------------------*/
