--- a/StrapPress-master/sass/site/_footer.scss
+++ b/StrapPress-master/sass/site/_footer.scss
@@ -1,5 +1,6 @@
 .site-footer {
-	padding: 4rem 0;
-    margin-top: 4rem;
+	padding: 2rem 0;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     background-color: $gray-100;
 }
