--- a/sass/site/_footer.scss
+++ b/sass/site/_footer.scss
@@ -1,6 +1,7 @@
 .site-footer {
-	padding: 4rem 0;
-    margin-top: 4rem;
+	padding: 2rem 0;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
     background-color: $gray-100;
     background-color: $footer-bg;
 	color: white;
