--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -9,7 +9,7 @@
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
-@import "templates/about-us";
+@import "templates/templates";
 
 
 /*--------------------------------------------------------------
