--- a/style.css
+++ b/style.css
@@ -6872,7 +6872,7 @@ a.text-dark:hover, a.text-dark:focus {
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
-.about {
+.banner {
   background-color: #e9ecef; }
 
 /*--------------------------------------------------------------
@@ -7028,8 +7028,9 @@ a.text-dark:hover, a.text-dark:focus {
 ## Footer
 --------------------------------------------------------------*/
 .site-footer {
-  padding: 4rem 0;
-  margin-top: 4rem;
+  padding: 2rem 0;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   background-color: #f8f9fa;
   background-color: #2f2f2f;
   color: white; }
