--- a/sass/site/_header.scss
+++ b/sass/site/_header.scss
@@ -2,6 +2,13 @@
 	margin-bottom: 3em;
 }
 
+.page-template-about,
+.page-template-home {
+	.site-header {
+		margin-bottom: 0;
+	}
+}
+
 .blog{
 	.site-header{
 		margin-bottom: 0;
