--- a/sass/site/_posts-and-pages.scss
+++ b/sass/site/_posts-and-pages.scss
@@ -60,26 +60,42 @@
 
 /* Posts Navigation */
 .nav-links {
-	display: flex;
-	justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 3rem;
 }
 
 /* Screenreaders */
 .screen-reader-text {
-	@include sr-only;
+  @include sr-only;
 }
 
 /* 404 page */
 .error404 {
-	.content-area {
-		@include make-col-ready();
-		@include make-col(12);	
-	}
+  .content-area {
+    @include make-col-ready();
+    @include make-col(12);  
+  }
 }
 
 .post {
   margin: 0;
   padding: 2rem 0;
+
+  .entry-title {
+    font-size: 1.5rem;
+    a {
+      color: $body-color;
+
+      &:hover {
+        text-decoration: none;
+      }
+    }
+  }
+
+  .more-link:hover {
+    text-decoration: none;
+  }
 }
 
 .blog {
