--- a/style.css
+++ b/style.css
@@ -3321,14 +3321,14 @@ input[type="button"].btn-block {
       color: rgba(0, 0, 0, 0.9); }
 
 .navbar-dark .navbar-brand {
-  color: #fff; }
+  color: #000; }
   .navbar-dark .navbar-brand:hover, .navbar-dark .navbar-brand:focus {
-    color: #fff; }
+    color: #000; }
 
 .navbar-dark .navbar-nav .nav-link {
-  color: rgba(255, 255, 255, 0.5); }
+  color: #fff; }
   .navbar-dark .navbar-nav .nav-link:hover, .navbar-dark .navbar-nav .nav-link:focus {
-    color: rgba(255, 255, 255, 0.75); }
+    color: #000; }
   .navbar-dark .navbar-nav .nav-link.disabled {
     color: rgba(255, 255, 255, 0.25); }
 
@@ -3336,21 +3336,21 @@ input[type="button"].btn-block {
 .navbar-dark .navbar-nav .active > .nav-link,
 .navbar-dark .navbar-nav .nav-link.show,
 .navbar-dark .navbar-nav .nav-link.active {
-  color: #fff; }
+  color: #000; }
 
 .navbar-dark .navbar-toggler {
-  color: rgba(255, 255, 255, 0.5);
+  color: #fff;
   border-color: rgba(255, 255, 255, 0.1); }
 
 .navbar-dark .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255, 255, 255, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"); }
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='%23fff' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E"); }
 
 .navbar-dark .navbar-text {
-  color: rgba(255, 255, 255, 0.5); }
+  color: #fff; }
   .navbar-dark .navbar-text a {
-    color: #fff; }
+    color: #000; }
     .navbar-dark .navbar-text a:hover, .navbar-dark .navbar-text a:focus {
-      color: #fff; }
+      color: #000; }
 
 .card {
   position: relative;
@@ -6875,6 +6875,14 @@ a.text-dark:hover, a.text-dark:focus {
 .banner {
   background-color: #e9ecef; }
 
+.about-columns {
+  padding: 3rem 0; }
+  .about-columns h4 {
+    margin-top: 2rem; }
+  @media (min-width: 768px) {
+    .about-columns {
+      margin-top: 0; } }
+
 /*--------------------------------------------------------------
 ## Comments
 --------------------------------------------------------------*/
@@ -6942,7 +6950,8 @@ a.text-dark:hover, a.text-dark:focus {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: justify;
-      justify-content: space-between; }
+      justify-content: space-between;
+  margin-top: 3rem; }
 
 /* Screenreaders */
 .screen-reader-text {
@@ -6969,6 +6978,14 @@ a.text-dark:hover, a.text-dark:focus {
 .post {
   margin: 0;
   padding: 2rem 0; }
+  .post .entry-title {
+    font-size: 1.5rem; }
+    .post .entry-title a {
+      color: #212529; }
+      .post .entry-title a:hover {
+        text-decoration: none; }
+  .post .more-link:hover {
+    text-decoration: none; }
 
 .blog .post {
   padding: 6rem 0; }
@@ -7018,11 +7035,23 @@ a.text-dark:hover, a.text-dark:focus {
 .blog .site-header {
   margin-bottom: 0; }
 
-.navbar {
-  background-color: #1abc9c; }
+.page-template-about .site-header,
+.page-template-home .site-header {
+  margin-bottom: 0; }
 
 .navbar-brand a {
-  color: white; }
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 2px; }
+  .navbar-brand a:hover {
+    text-decoration: none; }
+
+.navbar-expand-lg .navbar-nav .nav-link {
+  padding-left: .8rem;
+  padding-right: .8rem;
+  text-transform: uppercase;
+  font-size: .9rem; }
 
 /*--------------------------------------------------------------
 ## Footer
