--- a/sass/site/_header.scss
+++ b/sass/site/_header.scss
@@ -2,6 +2,12 @@
 	margin-bottom: 3em;
 }
 
+.blog {
+	.site-header {
+		margin-bottom: 0;
+	}
+}
+
 .page-template-about,
 .page-template-home {
 	.site-header {
@@ -9,17 +15,23 @@
 	}
 }
 
-.blog{
-	.site-header{
-		margin-bottom: 0;
+.navbar-brand {
+	a {
+		color: $white;
+		text-transform: uppercase;
+		font-weight: 700;
+		letter-spacing: 2px;
+
+		&:hover {
+			text-decoration: none;
+		}
 	}
-}
-.navbar{
-	background-color: $custom;
 }
 
-.navbar-brand{
-	a{
-		color: white;
-	}
+// Bootstrap hack - check next version
+.navbar-expand-lg .navbar-nav .nav-link {
+	padding-left: .8rem;
+	padding-right: .8rem;
+	text-transform: uppercase;
+	font-size: .9rem;
 }
