--- a/sass/site/_site.scss
+++ b/sass/site/_site.scss
@@ -37,6 +37,11 @@
 --------------------------------------------------------------*/
 @import "footer";
 
+/*--------------------------------------------------------------
+## homepage
+--------------------------------------------------------------*/
+@import "homepage";
+
 
 .site-content {
 	word-break: break-word;
