--- a/sass/site/_homepage.scss
+++ b/sass/site/_homepage.scss
@@ -6,14 +6,14 @@
 
     	img {
     		width: 100%;
-    		max-height: 420px;
+    		max-height: 360px; //420
     		object-fit: cover;
     		border-radius: 3px;
     		margin-bottom: 10px;
     	}
 
     	h2 {
-    		width: 29%;
+    		width: 50%;//15
     		float: left;
     		padding: 30px;
     		border-radius: 3px;
@@ -21,11 +21,22 @@
     	}
 
     	p {
-    		width: 69%;
+    		width: 50%; //69
     		float: right;
     		padding: 30px;
     		border-radius: 3px;
     		background-color: $gray-100;
     	}
+    }
+    .banner{
+        padding-top: 2rem;
+    }
+}
+.container{
+    .top{
+        width: 100%;
+    }
+    .banner{
+        width:100%;
     }
 }
