--- a/style.css
+++ b/style.css
@@ -6977,9 +6977,6 @@ a.text-dark:hover, a.text-dark:focus {
       flex: 0 0 100%;
   max-width: 100%; }
 
-.entry-title {
-  padding: 2rem; }
-
 .post {
   margin: 0;
   padding: 2rem 0; }
@@ -7034,7 +7031,7 @@ a.text-dark:hover, a.text-dark:focus {
 ## Header
 --------------------------------------------------------------*/
 .site-header {
-  margin-bottom: 3em; }
+  margin-bottom: 0rem; }
 
 .blog .site-header {
   margin-bottom: 0; }
@@ -7087,23 +7084,32 @@ a.text-dark:hover, a.text-dark:focus {
   margin-bottom: 40px; }
   .home-page .home-project img {
     width: 100%;
-    max-height: 420px;
+    max-height: 360px;
     -o-object-fit: cover;
        object-fit: cover;
     border-radius: 3px;
     margin-bottom: 10px; }
   .home-page .home-project h2 {
-    width: 29%;
+    width: 50%;
     float: left;
     padding: 30px;
     border-radius: 3px;
     background-color: #f8f9fa; }
   .home-page .home-project p {
-    width: 69%;
+    width: 50%;
     float: right;
     padding: 30px;
     border-radius: 3px;
     background-color: #f8f9fa; }
+
+.home-page .banner {
+  padding-top: 2rem; }
+
+.container .top {
+  width: 100%; }
+
+.container .banner {
+  width: 100%; }
 
 .site-content {
   word-break: break-word; }
